k8s/bpm.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bpm-deploy
  namespace: tfm-pre-agat-prog
spec:
  selector:
    matchLabels:
      app: bpm
  template:
    metadata:
      labels:
        app: bpm
    spec:
      containers:
      - name: bpm
        image: agatalba/tfm-mca-filemanagement-bpm:0.0.1
        ports:
          - containerPort: 8082
---
apiVersion: v1
kind: Service
metadata:
  name: bpm-service
  namespace: tfm-pre-agat-prog
spec:
  type: ClusterIP
  selector:
    app: bpm
  ports:
  - name: bpm-port
    port: 8082
