k8s/cdc-service.yml
apiVersion: v1
kind: Service
metadata:
  name: cdc-service-svc
spec:
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: cdc-service
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cdc-service
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: cdc-service
  replicas: 1
  template:
    metadata:
      labels:
        app: cdc-service
    spec:
      containers:
        - name: cdc-service
          image: eventuateio/eventuate-cdc-service:0.12.0.RELEASE
          ports:
            - containerPort: 8080
