k8s/docs.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: docs-deploy
spec:
  selector:
    matchLabels:
      app: docs
  template:
    metadata:
      labels:
        app: docs
    spec:
      containers:
      - name: docs
        image: agatalba/tfm-mca-filemanagement-docs:1.0.18
        ports:
          - containerPort: 8083
        volumeMounts:
          - mountPath: /tmp/docs
            name: docs-claim
      volumes:
        - name: docs-claim
          persistentVolumeClaim:
            claimName: docs-claim
---
apiVersion: v1
kind: Service
metadata:
  name: docs-service
spec:
  type: ClusterIP
  selector:
    app: docs
  ports:
  - name: docs-port
    port: 8083
