k8s/files.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: files-deploy
  namespace: tfm-pre-agat-prog
spec:
  selector:
    matchLabels:
      app: files
  template:
    metadata:
      labels:
        app: files
    spec:
      containers:
      - name: files
        image: agatalba/tfm-mca-filemanagement-files:0.0.1
        ports:
          - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: files-service
  namespace: tfm-pre-agat-prog
spec:
  type: ClusterIP
  selector:
    app: files
  ports:
  - name: files-port
    port: 8080
