k8s/front.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: front-deploy
  namespace: tfm-pre-agat-prog
spec:
  selector:
    matchLabels:
      app: front
  template:
    metadata:
      labels:
        app: front
    spec:
      containers:
      - name: front
        image: agatalba/tfm-mca-filemanagement-front:0.0.1
        ports:
          - containerPort: 8090
---
apiVersion: v1
kind: Service
metadata:
  name: front-service
  namespace: tfm-pre-agat-prog
spec:
  type: ClusterIP
  selector:
    app: front
  ports:
  - name: front-port
    port: 8090
