k8s/gateway.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway-deploy
spec:
  selector:
    matchLabels:
      app: gateway
  template:
    metadata:
      labels:
        app: gateway
    spec:
      containers:
      - name: gateway
        image: agatalba/tfm-mca-filemanagement-gateway:0.0.1
        ports:
          - containerPort: 8085
---
apiVersion: v1
kind: Service
metadata:
  name: gateway-service
spec:
  type: ClusterIP
  selector:
    app: gateway
  ports:
  - name: gateway-port
    port: 8085
