k8s/index.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: index-deploy
  namespace: tfm-pre-agat-prog
spec:
  selector:
    matchLabels:
      app: index
  template:
    metadata:
      labels:
        app: index
    spec:
      containers:
      - name: index
        image: agatalba/tfm-mca-filemanagement-index:0.0.1
        ports:
          - containerPort: 8084
---
apiVersion: v1
kind: Service
metadata:
  name: index-service
  namespace: tfm-pre-agat-prog
spec:
  type: ClusterIP
  selector:
    app: index
  ports:
  - name: index-port
    port: 8084
