k8s/ingress-angular.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: angular-ingress
spec:
  rules:
  - host: front-angular.files.dev
    http:
      paths:
        - path: /oauth
          pathType: Prefix
          backend:
            service:
              name: oauth2
              port:
                number: 8081    
        - path: /api
          pathType: Prefix
          backend:
            service:
              name: gateway-service
              port:
                number: 8085        
        - path: /
          pathType: ImplementationSpecific
          backend:
            service:
              name: angular-service
              port:
                number: 80
#        - path: /rabbitmq(/|$)(.*)
#          pathType: ImplementationSpecific
#          backend:
#            service:
#              name: rabbitmq
#              port:
#                number: 15672
